--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
        <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title> OPay ₦15,000 Customer Reward Offer!</title>
-        <link rel="shortcut icon" type="image/png" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhKNfcc2K-I2EcPeXFGhZd9DIysRKAh7GckgJNNFL96lBVWro0tHhL1-FIul5S2f4fexYx-195nKd6l7G4DeELfxpJmARWvoZ9yXctSUanqoj5ubP_gFxJX44lfb3AiRum9B_uCDgr62-IVGSrLHu6ZcJ5FCj0WNHupmmb0l7_p-fL8uBjKV-uY9X82DNE/s1242/WhatsApp%20Image%202024-09-18%20at%2001.26.57.jpeg" />
+        <link rel="shortcut icon" type="image/png" href="https://i.postimg.cc/YCtxRW8g/Photo-Grid-1762790942100.jpg" />
         <meta name="og:title" content=" OPay ₦15,000 Customer Reward Offer!" />
         <meta property="og:description" content="we are Giving out ₦15,000 to our customers in celebration of our AnniversaryðŸŽ‰" />
-        <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhKNfcc2K-I2EcPeXFGhZd9DIysRKAh7GckgJNNFL96lBVWro0tHhL1-FIul5S2f4fexYx-195nKd6l7G4DeELfxpJmARWvoZ9yXctSUanqoj5ubP_gFxJX44lfb3AiRum9B_uCDgr62-IVGSrLHu6ZcJ5FCj0WNHupmmb0l7_p-fL8uBjKV-uY9X82DNE/s1242/WhatsApp%20Image%202024-09-18%20at%2001.26.57.jpeg" />
+        <meta property="og:image" content="https://i.postimg.cc/YCtxRW8g/Photo-Grid-1762790942100.jpg" />
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
     <link rel="me" href="https://www.blogger.com/profile/13809910274301822692" />
