--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <title> OPay ₦15,000 Customer Reward Offer!</title>
         <link rel="shortcut icon" type="image/png" href="https://i.postimg.cc/YCtxRW8g/Photo-Grid-1762790942100.jpg" />
         <meta name="og:title" content=" OPay ₦15,000 Customer Reward Offer!" />
-        <meta property="og:description" content="we are Giving out ₦15,000 to our customers in celebration of our AnniversaryðŸŽ‰" />
+        <meta property="og:description" content="we are Giving out ₦15,000 to our customers in celebration of our Anniversary" />
         <meta property="og:image" content="https://i.postimg.cc/YCtxRW8g/Photo-Grid-1762790942100.jpg" />
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
